# sr_vision

./: .gitignore  CMakeLists.txt  README.md  aws.yml  jenkins.yml  package.xml  repository.rosinstall  shippable.yml
sr_alvar_object_recognition/: CMakeLists.txt  README.md  package.xml  setup.py
sr_alvar_object_recognition/config/: alvar_to_boxes_map.yaml
sr_alvar_object_recognition/launch/: alvar_object_recognition.launch  alvar_to_object.launch
sr_alvar_object_recognition/src/: alvar_to_object
sr_alvar_object_recognition/src/sr_alvar_object_recognition/: alvar_to_object
sr_benchmarking/: CMakeLists.txt  README.md  package.xml
sr_benchmarking/scripts/: score.py
sr_benchmarking/src/: drawing.py  read_file.py
sr_benchmarking/src/sr_benchmarking/: berkeley.py  drawing.py  interface.py  read_file.py
sr_camera_launch/: CMakeLists.txt  README.md  package.xml
sr_camera_launch/calibration/: logitech_brio_f0.5.yaml
sr_camera_launch/description/: astra.gazebo.xacro  astra.urdf.xacro  ensenso.gazebo.xacro  ensenso.urdf.xacro  kinect.dae  kinect.gazebo.xacro  kinect.urdf.xacro
sr_camera_launch/launch/: astra.launch  ensenso.launch  ensenso_frames.launch  kinect.launch  logitech_brio.launch  realsense.launch
sr_camera_launch/utils/: camera_calibration.launch  kinect_calibration.launch
sr_camera_pose_estimation/: CMakeLists.txt  README.md  package.xml
sr_camera_pose_estimation/launch/: alvar.launch  calibration.launch  calibration_new.launch  example_setup.launch  extrinsic.launch  lab.launch  mock_world_transforms.launch  sim.launch  tmp_test.launch  tom_test.launch
sr_camera_pose_estimation/src/: cam_tf_pub.py  camera_transform_publisher.py  lookup_tf_test.py  pose_averager.py
sr_extrinsic_calibration/: CMakeLists.txt  README.md  package.xml  setup.py
sr_extrinsic_calibration/launch/: print_camera_tf.launch
sr_extrinsic_calibration/src/sr_extrinsic_calibration/: abort_exception.py  camera_calibration.py  camera_calibration_node  print_camera_tf  transformation_manager.py
sr_extrinsic_calibration/test/: base_calibration_test.py  test_constraints_errors.py  test_continuous_calibration.py  test_continuous_calibration.test  test_simple_translation.test  test_three_points_translation_and_rotation.test  test_translation_and_rotation.py  test_translation_and_rotation.test
sr_handeye_calibration/: CMakeLists.txt  package.xml
sr_handeye_calibration/launch/: extrinsic_calibration.launch  iview_camera.launch  iview_sgs.launch  result_check.launch  test_marker_positioning.launch  ur10_deimos_calibration.launch  ur10_xtion_calibration.launch
sr_handeye_calibration/src/: insert_spike.py
sr_handeye_calibration/utils/: xtion_calibration.launch
sr_marker_recognition/: CMakeLists.txt  README.md  package.xml
sr_marker_recognition/launch/: alvar.launch  aruco.launch
sr_object_segmentation/: CMakeLists.txt  README.md  package.xml  setup.py
sr_object_segmentation/scripts/: segmentation.py
sr_object_segmentation/shapes/: shape_creation.py
sr_object_segmentation/shapes/dataset/: banana.npy  circle.npy  leaf.npy  rectangle.npy  star.npy  strawberry.npy
sr_object_segmentation/src/sr_object_segmentation/: blobs_segmentation.py  camshift.py  color_segmentation.py  hsv_segmentation.py  shape_color_segmentation.py  sr_object_segmentation.py
sr_object_segmentation/test/: test_blobs_segmentation.py  test_blobs_segmentation.py~  test_color_segmentation.py
sr_point_cloud/: CMakeLists.txt  package.xml  setup.py
sr_point_cloud/action/: Track.action
sr_point_cloud/cfg/: Tracker.cfg  Triangulator.cfg
sr_point_cloud/config/: pmd_nano_tracker.rviz
sr_point_cloud/include/sr_point_cloud/: cluster_segmentor.h  tracker.hpp  tracker_rgb.hpp  triangulator.hpp
sr_point_cloud/launch/: camera_transform.launch  pmd_nano_tracker.launch  triangulator.launch
sr_point_cloud/scripts/: camera_transform  track_client
sr_point_cloud/src/: cluster_segmentor_node.cpp  point_cloud_services_node.cpp  tracker.cpp  tracker_rgb.cpp  triangulator.cpp
sr_point_cloud/src/sr_point_cloud/: cloud_cropping.py  cloud_utils.py
sr_point_cloud/test/: cloud_cropping.test  cloud_services.test  cloud_tracker.test  cluster_segmentor.test  test_cloud_cropping.py  test_cloud_services.py  test_cloud_tracker.py  test_cluster_segmentor.py  test_triangulator.cpp  track_box.bag
sr_recognizer/: .gitignore  CMakeLists.txt  CMakeLists_rel.txt  package.xml
sr_recognizer/action/: Recognizer.action  Recognizer.action~
sr_recognizer/cfg/: multipipeline_config.xml
sr_recognizer/cfg/manual/: hv_config.xml  multipipeline_config.xml  sift_config.xml
sr_recognizer/include/recognizer/: recognizer_ros.h
sr_recognizer/launch/: recognition_astra_demo.launch  recognition_demo.launch  recognition_demo_file.launch  recognition_service.launch
sr_recognizer/src/: recognizer_client.cpp  recognizer_client.py  recognizer_client.py~  recognizer_server (copy).cpp  recognizer_server.cpp  recognizer_visualizer.cpp  rocognizer_client.py~
sr_vision_description/: CMakeLists.txt  package.xml
sr_vision_description/ar_markers/: ar_marker_0_1_2_3_460.xml  ar_marker_0_1_2_3_a4.xml
sr_vision_description/models/ar_marker_0/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
sr_vision_description/models/ar_marker_0_1_2_3_460/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
sr_vision_description/models/ar_marker_0_1_2_3_a4/: model-1_4.sdf  model-1_5.sdf  model.sdf
sr_vision_description/models/ar_marker_1/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
sr_vision_description/models/ar_marker_2/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
sr_vision_description/models/ar_marker_3/: model-1_4.sdf  model-1_5.sdf  model.config  model.sdf
sr_vision_description/plugins/: gazebo_grasp_fix.urdf.xacro
sr_vision_description/robots/: sat.urdf.xacro  sat_ur10_hand_h.urdf.xacro
sr_vision_description/sensors/: kinect.gazebo.xacro  kinect.urdf.xacro
sr_vision_description/worlds/: sr_lab.world
sr_vision_mocks/: CMakeLists.txt  README.md  package.xml  setup.py
(+1074 files in other folders)
