<?xml version="1.0"?>
<package>
  <name>sr_camera_launch</name>
  <version>0.0.0</version>
  <description>The sr_camera_launch package</description>
  <maintainer email="software@shadowrobot.com">michal</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>freenect_launch</run_depend>
  <run_depend>astra_launch</run_depend>
  <run_depend>rgbd_launch</run_depend>

</package>
