<?xml version="1.0"?>
<package>
  <name>sr_camera_pose_estimation</name>
  <version>0.0.0</version>
  <description>The sat_camera_pose_estimation package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
