<?xml version="1.0"?>
<package>
  <name>sr_camera_pose_estimation</name>
  <version>0.0.1</version>
  <description>The camera pose estimation package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>GDL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ar_track_alvar</build_depend>
  <build_depend>ar_track_alvar_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>ar_track_alvar</run_depend>
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
