<?xml version="1.0"?>
<package>
  <name>sr_extrinsic_calibration</name>
  <version>0.0.0</version>
  <description>Package contains camera calibration node</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <author>Andriy Petlovanyy</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>tf2_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>
</package>
