<?xml version="1.0"?>
<package>
  <name>sr_handeye_calibration</name>
  <version>0.0.0</version>
  <description>The sr_handeye_calibrationn package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>