<?xml version="1.0"?>
<package>
  <name>sr_handeye_calibration</name>
  <version>0.0.0</version>
  <description>The sr_handeye_calibrationn package</description>
  <maintainer email="software@shadowrobot.com">user</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>easy_handeye</run_depend>
</package>
