<?xml version="1.0"?>
<package>
  <name>sr_point_cloud</name>
  <version>0.0.1</version>
  <description>Point cloud object recognition and tracking.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>Private</license>
  <author email="mark@shadowrobot.com">Mark Pitchless</author>
  <author email="yi@shadowrobot.com">Yi Li</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- http://wiki.ros.org/pcl/Tutorials -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>sr_vision_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>sr_vision_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
